# meeting-manage

./: .env  .env.example  .env.local  .env.production.example  .gitignore  API_TOKEN_MANAGEMENT_FIX_REPORT.md  AUDIT_SYSTEM_VALIDATION.md  CACHE_CLEANUP_GUIDE.md  DEPLOYMENT.md  Dockerfile.dev  README.md  clear-cache.sh  commitlint.config.js  current-login-page.txt  debug-api-response.txt  debug-guide.md  debug-homepage-snapshot.txt  debug-snapshot-final-login-test.md  debug-snapshot-homepage.md  debug-snapshot-login-after-fix.md  debug-snapshot-login-page.md  debug-snapshot-login-redirect.md  debug-snapshot-test-login.md  debug-snapshot.md  debug-test.js  diagnose-nuxt.sh  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  login-page-snapshot-2.txt  login-page-snapshot.txt  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  seed-rooms.ts  snapshot-api-test.json  snapshot-api-test2.json  (+29 more)
.husky/: commit-msg  pre-commit
.serena/: project.yml
app/: app.vue
docker/: Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
docs/: PRD.md  PRD_BMAD.md  PRD_FULL.md  api-calling-guidelines.md  architecture.md  bmm-workflow-status.yaml  database-setup.md  debug-management.md  epics.md  implementation-readiness-report-2025-11-15.md  index.md  reservation-status-control-implementation.md  smart-meeting-room-features.md  sprint-change-proposal-api-token-management-2025-11-24.md  story-update-summary.md  test-design-system.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md
(+493 files in other folders)
